# gt_pico_guncon3_uf2

./: CMakeLists.txt  LICENSE  README_TR.md  pico_sdk_import.cmake
.github/workflows/: build.yml  main.yml
src/: guncon3_packet.c  guncon3_packet.h  main.c  pins.h  tusb_config.h  usb_descriptors.c
